<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="kontakPersonOneVM" type="com.bokusapplication.app.modules.kontakpersonone.data.viewmodel.KontakPersonOneVM"/>
    </data>
    <LinearLayout android:id="@+id/linearKontakpersonO"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_25pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnuser"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowuser"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageUser"
                        android:layout_height="@dimen/_39pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="@dimen/_39pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                    <TextView android:id="@+id/txtHelloUseru"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_weight="0.7"
                        android:layout_width="0dp"
                        android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtHelloUseru}"
                        style="@style/txtMulishromanbold16" tools:text="@string/msg_hello_user_u"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end"
                android:id="@+id/txtKontakPerson"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_57pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtKontakPerson}"
                style="@style/txtMulishromanbold20" tools:text="@string/lbl_kontak_person"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnpusatsolsepat"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300_4ccornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPusatSolSepat"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtPusatSolSepat}"
                    style="@style/txtMulishromanbold15" tools:text="@string/msg_pusat_sol_sepat"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_width="match_parent"
                    android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtDescription}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_jl_jenderal_su"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnsolsepatutauf"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300_4ccornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSolsepatutauf"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtSolsepatutauf}"
                    style="@style/txtMulishromanbold15" tools:text="@string/msg_sol_sepatu_tauf"/>
                <TextView android:id="@+id/txtDescriptionOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_width="match_parent"
                    android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtDescriptionOne}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_jl_gajah_mada"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnlaundrydansol"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300_4ccornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLAUNDRYDANSOL"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtLAUNDRYDANSOL}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_laundry_dan_sol"/>
                <TextView android:id="@+id/txtDescriptionTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtDescriptionTwo}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_jl_tj_pura_k"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnsolsepatu"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300_4ccornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSolSepatu"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtSolSepatu}"
                    style="@style/txtMulishromanbold15" tools:text="@string/lbl_sol_sepatu"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtDescriptionThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_width="match_parent"
                    android:text="@{kontakPersonOneVM.kontakPersonOneModel.txtDescriptionThree}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_jl_soekarno_ha"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
