<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="kontakPersonVM" type="com.bokusapplication.app.modules.kontakperson.data.viewmodel.KontakPersonVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnuser"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_25pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowuser"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageUser"
                    android:layout_height="@dimen/_39pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_39pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
                <TextView android:id="@+id/txtHelloUseru"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtHelloUseru}"
                    style="@style/txtMulishromanbold16" tools:text="@string/msg_hello_user_u"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearKontakperson"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_57pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:ellipsize="end"
                android:id="@+id/txtKontakPerson"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{kontakPersonVM.kontakPersonModel.txtKontakPerson}"
                style="@style/txtMulishromanbold20" tools:text="@string/lbl_kontak_person"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnpusatsolsepat"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300_4ccornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPusatSolSepat"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtPusatSolSepat}"
                    style="@style/txtMulishromanbold15" tools:text="@string/msg_pusat_sol_sepat"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtDescription"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtDescription}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_jl_jenderal_su"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnOrder"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_27pxv"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_23pxh"
                    android:layout_marginStart="@dimen/_23pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_78pxh"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_20pxh"
                    android:paddingStart="@dimen/_17pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_order"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_order"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnsolsepatutauf"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300_4ccornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSolsepatutauf"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtSolsepatutauf}"
                    style="@style/txtMulishromanbold15" tools:text="@string/msg_sol_sepatu_tauf"/>
                <TextView android:id="@+id/txtDescriptionOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_width="match_parent"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtDescriptionOne}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_jl_gajah_mada"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnlaundrydansol"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300_4ccornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLAUNDRYDANSOL"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtLAUNDRYDANSOL}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_laundry_dan_sol"/>
                <TextView android:id="@+id/txtDescriptionTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtDescriptionTwo}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_jl_tj_pura_k"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnsolsepatu"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_300_4ccornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSolSepatu"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtSolSepatu}"
                    style="@style/txtMulishromanbold15" tools:text="@string/lbl_sol_sepatu"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtDescriptionThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_width="match_parent"
                    android:text="@{kontakPersonVM.kontakPersonModel.txtDescriptionThree}"
                    style="@style/txtMulishromanbold10" tools:text="@string/msg_jl_soekarno_ha"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylebluegray_1">
            <LinearLayout android:id="@+id/linearRowuserTwo"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_17pxv"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearRowsearch"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.87"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <LinearLayout android:id="@+id/linearColumnsearch"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_18pxv"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_weight="1"
                        android:layout_width="0dp" android:orientation="vertical">
                        <ImageView android:id="@+id/imageSearch"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_26pxh"
                            android:layout_width="@dimen/_27pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_search_white_a700"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_search_white_a700"/>
                        <TextView android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:id="@+id/txtEksplor"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_2pxh"
                            android:layout_marginStart="@dimen/_2pxh"
                            android:layout_marginTop="@dimen/_4pxv"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{kontakPersonVM.kontakPersonModel.txtEksplor}"
                            style="@style/txtMulishromanbold13_1" tools:text="@string/lbl_eksplor"/>
                    </LinearLayout>
                    <LinearLayout android:id="@+id/linearColumnuserOne"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                        <ImageView android:id="@+id/imageUserOne"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_marginTop="@dimen/_7pxv"
                            android:layout_width="@dimen/_28pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_user_bluegray_900"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_user_bluegray_900"/>
                        <TextView android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:id="@+id/txtKontak"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_20pxv"
                            android:layout_marginEnd="@dimen/_2pxh"
                            android:layout_marginStart="@dimen/_2pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{kontakPersonVM.kontakPersonModel.txtKontak}"
                            style="@style/txtMulishromanbold13_2" tools:text="@string/lbl_kontak"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearColumnuserTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageUserTwo"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_31pxh"
                        android:layout_width="@dimen/_31pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user_white_a700"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_user_white_a700"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtUserThree"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{kontakPersonVM.kontakPersonModel.txtUserThree}"
                        style="@style/txtMulishromanbold13_1" tools:text="@string/lbl_user"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
